Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21645

QSignalSpy always contains an empty QVariant when used with a signal having a QVariant as parameter

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0
    • 4.7.4
    • Testing: qtestlib
    • None
    • Arch Linux x86_64
    • 9a0b7348b3548c5062db28129b11a8f1abbd7540

    Description

      Testing the following signal with QSignalSpy always results in an empty (not null) QVariant:
      void changed(const QVariant &)

      It seems QVariant::d contains the correct value (45 int), but converting it back to int returns 0.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kenthans Kent Hansen (Inactive)
            mkrems Marcel Krems
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes